--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "atlas-mysql",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "A powerful, type-safe MySQL ORM with query building, transaction support, and comprehensive logging for Node.js applications",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -42,7 +42,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/mattthehat/atlas-mysql.git"
+        "url": "git+https://github.com/mattthehat/atlas-mysql.git"
     },
     "bugs": {
         "url": "https://github.com/mattthehat/atlas-mysql/issues"
