--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,3 +28,5 @@ jobs:
       - run: npm run clean && npm run build
 
       - run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ''
