--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '24'
-          registry-url: 'https://registry.npmjs.org'
 
       - run: npm ci
 
@@ -27,6 +26,4 @@ jobs:
 
       - run: npm run clean && npm run build
 
-      - run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ''
+      - run: npm publish --provenance --access public --registry https://registry.npmjs.org
